# crime-dashboard

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
conf/: prod.yaml
etl/: Dockerfile  requirements.txt
etl/dags/: climate.py  climate_functions.py  config.py  crime_functions.py  default.py  extract_functions.py  housing_functions.py  merging_functions.py  utils.py
notebooks/: eda_of_data.ipynb
src/: extract.py  main.py
streamlit/: app.py  requirements.txt
