[tool.poetry]
name = "crime-dashboard"
version = "0.1.0"
description = ""
authors = ["Arkadiy Sotnikov  <arkadiy.sotnikov@burtcorp.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

