[tool.poetry]
name = "crime-dashboard"
version = "0.1.0"
description = ""
authors = ["Arkadiy Sotnikov  <arkadiy.sotnikov@burtcorp.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
hydra-core = "^1.2.0"
streamlit = "^1.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

